# Group20

./: .gitignore  PriceLoader2.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: price_a.parquet  price_aapl.parquet  price_abbv.parquet  price_abnb.parquet  price_abt.parquet  price_acgl.parquet  price_acn.parquet  price_adbe.parquet  price_adi.parquet  price_adm.parquet  price_adp.parquet  price_adsk.parquet  price_aee.parquet  price_aep.parquet  price_aes.parquet  price_afl.parquet  price_aig.parquet  price_aiz.parquet  price_ajg.parquet  price_akam.parquet  price_alb.parquet  price_algn.parquet  price_all.parquet  price_alle.parquet  price_amat.parquet  price_amcr.parquet  price_amd.parquet  price_ame.parquet  price_amgn.parquet  price_amp.parquet  price_amt.parquet  price_amzn.parquet  price_anet.parquet  price_aon.parquet  price_aos.parquet  price_apa.parquet  price_apd.parquet  price_aph.parquet  price_apo.parquet  price_aptv.parquet  (+462 more)
src/: BenchmarkStrategy.py  PriceLoader.py  PriceLoader2.py  PriceLoader_reporting.py  StrategyComparison.ipynb  StrategyComparison.py  class.py  constants.py  data_loader.py  engine.py  main.py  models.py  performance.ipynb  performance2.ipynb  reporting.py  reporting2.py  strategies.py
tests/: test_models.py
tests/fixtures/: sample_data.csv
